# face-dancer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: brief.md
docs/protocol/: schema.json
docs/superpowers/plans/: 2026-06-10-membrane-primitive.md  2026-06-10-protocol-envelope.md  2026-06-11-delta-messages.md  2026-06-11-dynamic-state.md  2026-06-11-intent-message.md  2026-06-11-vocabulary-spike.md  2026-06-12-capability-goals.md  2026-06-12-rules-rider.md  2026-06-12-sheet-artifact.md  2026-06-13-apply-delta-executor.md  2026-06-13-contest-message.md  2026-06-13-decision-policy.md  2026-06-13-perception.md  2026-06-13-rider-matcher.md  2026-06-13-roll-messages.md  2026-06-14-judgment-routing.md  2026-06-14-resolution-loop.md  2026-06-14-roll-engine.md
docs/superpowers/specs/: 2026-06-11-delta-messages-design.md  (+18 more)
src/face_dancer/: __init__.py
tests/: test_hello.py
tests/test_bundle/: test_api.py  test_bundle.py
tests/test_capability/: test_capability.py
tests/test_decision/: test_goals.py  test_policy.py
tests/test_membrane/: test_api.py  test_instrumentation.py  test_scope.py  test_seam.py
tests/test_perception/: test_filter.py  test_scene.py
tests/test_protocol/: test_contest.py  test_delta.py  test_intent.py  test_messages.py  test_roll.py  test_schema.py  test_validation.py  test_vocabulary.py
tests/test_resolution/: test_apply.py  test_loop.py  test_roll.py
tests/test_rider/: test_judgment.py  test_matcher.py  test_rider.py
tests/test_sheet/: test_dnd5e.py  test_sheet.py
tests/test_state/: test_dynamic_state.py
(+39 files in other folders)
