[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "face-dancer"
version = "0.1.0"
description = "A portable, self-owning RPG character agent"
requires-python = ">=3.11"
dependencies = ["pydantic>=2"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/face_dancer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
files = ["src"]
strict = true
